Proceso trabajo autonomo un rato

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <img src="Assets/Logo.png" alt="">
             <h1>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
             <hr>
-            <p id="info-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida
+            <p id="info-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum
+                laoreet. Proin gravida
                 dolor sit amet lacus accumsan et viveera justo cmmodo.
             </p>
             <button id="btn-center">Download</button>
@@ -61,6 +62,73 @@
             <img src="Assets/su.png" alt="">
             <img src="Assets/rss.png" alt="">
         </div>
+    </div>
+    <div class="padre-taps">
+        <div class="taps">
+            <div class="taps-1" id="tap-colorZ">TAB 1</div>
+            <div class="taps-2">TAB 2</div>
+            <div class="taps-3">TAB 3</div>
+        </div>
+        <div class="text-tab">
+            <h3>Tabs with soft transitioning effect.</h3>
+            <p id="text-lab">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eusimod bibendum loareet. Proin gravida
+                dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis
+                natoque penatibus et magnis dis parturient montes.</p>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eusimod bibendum loareet.</p>
+            <button id="btn-zapote">Download</button>
+        </div>
+        <div>
+        <img src="Assets/image_right_u255.png" alt="">
+    </div>
+    </div>
+    <div class="sub-sect">
+        <img src="Assets/image2.png" alt="">
+        <div class="text-sub">
+            <h4>Sub list section</h4>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eusimod bibendum laoreet. Proin gravida
+                dolor sit amet lacus accumsan et viverra justo commodo</p>
+            <ul>
+                <li>
+                    Title
+                    <br>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenean eusimod bibendum laoreet.
+                    </p>
+                </li>
+                <li>
+                    Title
+                    <br>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenean eusimod bibendum laoreet. Proin gravida dolor
+                        sit amet lacus accumsan et viverra justo commodo.
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="standard-sect">
+        <div class="text-standard">
+            <h4>Standard Picture Section</h4>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                eusimod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan
+                et viverra justo commodo. Proin sodales pulvinar tempor. cum sociis
+                natoque penatibus et magnis dis parturient montes.
+            </p>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+                eusimod bibendum laoreet.
+            </p>
+        </div>
+        <img src="Assets/image3.png" alt="">
+    </div>
+    <div class="awsome-sect">
+        <h5>WHY THIS IS AWESOME</h5>
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
 </body>
 
