--- a/index.html
+++ b/index.html
@@ -78,41 +78,44 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eusimod bibendum loareet.</p>
             <button id="btn-zapote">Download</button>
         </div>
-        <div>
+        <div id="imgen">
         <img src="Assets/image_right_u255.png" alt="">
     </div>
     </div>
     <div class="sub-sect">
-        <img src="Assets/image2.png" alt="">
+        <img src="Assets/image2.png" alt="" id="imgen-diseño">
         <div class="text-sub">
             <h4>Sub list section</h4>
-            <hr>
+            <hr class="color-hr-sub">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eusimod bibendum laoreet. Proin gravida
                 dolor sit amet lacus accumsan et viverra justo commodo</p>
-            <ul>
-                <li>
-                    Title
+            <ul class="list">
+                <li class="diseño">
+                    <img src="Assets/icon1.png" alt="">
+                    <div>
+                    <h5>Title</h5>
                     <br>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Aenean eusimod bibendum laoreet.
                     </p>
+                </div>
                 </li>
-                <li>
-                    Title
+                <li class="diseño">
+                    <img src="Assets/icon1.png" alt="">
+                    <div>
+                    <h5>Title</h5>
                     <br>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Aenean eusimod bibendum laoreet. Proin gravida dolor
-                        sit amet lacus accumsan et viverra justo commodo.
+                    <p id="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenean eusimod bibendum laoreet. Proin gravida dolor sit amet
+                        lacus accumsan et viverra justo commodo.
                     </p>
-                </li>
-            </ul>
+                </div>
         </div>
     </div>
     <div class="standard-sect">
         <div class="text-standard">
             <h4>Standard Picture Section</h4>
-            <hr>
+            <hr class="color-hr-sub">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
                 eusimod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan
                 et viverra justo commodo. Proin sodales pulvinar tempor. cum sociis
