Seguimiento con la entrega del trabajo

--- a/index.html
+++ b/index.html
@@ -28,28 +28,28 @@
             <img src="Assets/Logo.png" alt="">
             <h1>MODERN AXURE TEMPLATE FOR BEAUTIFUL PROTOTYPES</h1>
             <hr>
-            <p id="info-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum
+            <p class="color-p" id="info-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum
                 laoreet. Proin gravida
                 dolor sit amet lacus accumsan et viveera justo cmmodo.
             </p>
             <button id="btn-center">Download</button>
         </div>
         <div class="formulario">
-            <form>
                 <div class="cabeza">
                     <p>Try Your <span>FREE</span> Trial Today</p>
                 </div>
+                <div class="relleno">
                 <input type="text" placeholder="Name">
                 <input type="text" placeholder="Email">
                 <input type="text" placeholder="Password">
-                <button>Get Started</button>
-            </form>
+            </div>
+                <button id="get-btn">Get Started</button>
         </div>
     </div>
     <div class="social-media">
         <div class="text-social">
             <h2>Social Media</h2>
-            <p id="p-media">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <p class="color-p" id="p-media">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Aenean euismod bibendum loareet.
             </p>
         </div>
@@ -71,11 +71,11 @@
         </div>
         <div class="text-tab">
             <h3>Tabs with soft transitioning effect.</h3>
-            <p id="text-lab">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eusimod bibendum loareet. Proin gravida
+            <p class="color-p" id="text-lab">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eusimod bibendum loareet. Proin gravida
                 dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis
                 natoque penatibus et magnis dis parturient montes.</p>
             <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eusimod bibendum loareet.</p>
+            <p class="color-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eusimod bibendum loareet.</p>
             <button id="btn-zapote">Download</button>
         </div>
         <div id="imgen">
@@ -86,8 +86,8 @@
         <img src="Assets/image2.png" alt="" id="imgen-diseño">
         <div class="text-sub">
             <h4>Sub list section</h4>
-            <hr class="color-hr-sub">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eusimod bibendum laoreet. Proin gravida
+            <div class="linea-sub"></div>
+            <p class="color-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eusimod bibendum laoreet. Proin gravida
                 dolor sit amet lacus accumsan et viverra justo commodo</p>
             <ul class="list">
                 <li class="diseño">
@@ -95,7 +95,7 @@
                     <div>
                     <h5>Title</h5>
                     <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    <p class="color-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Aenean eusimod bibendum laoreet.
                     </p>
                 </div>
@@ -105,7 +105,7 @@
                     <div>
                     <h5>Title</h5>
                     <br>
-                    <p id="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    <p class="color-p" id="p2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Aenean eusimod bibendum laoreet. Proin gravida dolor sit amet
                         lacus accumsan et viverra justo commodo.
                     </p>
@@ -115,24 +115,199 @@
     <div class="standard-sect">
         <div class="text-standard">
             <h4>Standard Picture Section</h4>
-            <hr class="color-hr-sub">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+            <div class="linea-sub"></div>
+            <p class="color-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
                 eusimod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan
                 et viverra justo commodo. Proin sodales pulvinar tempor. cum sociis
                 natoque penatibus et magnis dis parturient montes.
             </p>
             <br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
+            <p class="color-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
                 eusimod bibendum laoreet.
             </p>
         </div>
+        <div class="image">
         <img src="Assets/image3.png" alt="">
     </div>
-    <div class="awsome-sect">
-        <h5>WHY THIS IS AWESOME</h5>
-        <hr>
+    </div>
+    <div class="awesome-padre">
+    <div class="awesome-text">
+        <h6>WHY THIS IS AWESOME</h6>
+        <div class="linea-sub"></div>
+        <p class="color-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
+    <div class="awsome-puntos">
+        <div class="punto1">
+            <img src="Assets/icon2.png" alt="">
+            <h5 id="espacio">Thoughtful Desubg</h5>
+            <p class="p-awesome">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenean euismod bibendum laoreet. Proin gravida dolor
+                sit amet lacus accumsan et viverra.
+            </p>
+        </div>
+        <div class="punto2">
+            <img src="Assets/icon3.png" alt="">
+            <h5 id="espacio">Well Crafted</h5>
+            <p class="p-awesome">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenean euismod bibendum laoreet. Proin gravida dolor
+                sit amet lacus accumsan et viverra.
+            </p>
+        </div>
+        <div class="punto3">
+            <img src="Assets/icon4.png" alt="">
+            <h5 id="espacio">Easy to Customize</h5>
+            <p class="p-awesome">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenean euismod bibendum laoreet. Proin gravida dolor
+                sit amet lacus accumsan et viverra.
+            </p>
+        </div>
+    </div>
+    <div class="pricing-padre">
+        <h6>PRICING OPTIONS</h6>
+        <div class="linea-sub"></div>
+        <p class="p-awesome" id="p-princing">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="pricing-options">
+            <div class="options1">
+                <h3 class="back-color-pricing">Basic</h3>
+                <hr>
+                <p class="back-color-pricing">$<span class="span-price">O</span></p>
+                <p class="back-color-pricing" id="text-princing">Free for Life</p>
+                <div class="linea1"></div>
+                <div class="info-price">
+                <p class="espaciado-p">1 GB OF SPACE</p>
+                <hr>
+                <p class="espaciado-p">10 GB OF BANDWIDTH</p>
+                <hr>
+                <p class="espaciado-p">3 WEBSITES</p>
+                <hr>
+                <p class="espaciado-p">BASIC CUSTOMIZATION</p>
+                <hr>
+                <p class="espaciado-p">WIRDORESS INTEGRATION</p>
+                <hr>
+                <p class="espaciado-p">EMAIL SUPPORT</p>
+            </div>
+            </div>
+            <div class="options2">
+                <h3 class="back-color-pricing">Professional</h3>
+                <hr>
+                <p class="back-color-pricing">$<span class="span-price">1<span id="span-9">9</span></span></p>
+                <p class="back-color-pricing" id="text-princing">Monthly Payment</p>
+                <div class="linea2">OUR MOST POPULAR</div>
+                <div class="info-price">
+                <p class="espaciado-p">5 GB OF SPACE</p>
+                <hr>
+                <p class="espaciado-p">50 GB OF BANDWIDTH</p>
+                <hr>
+                <p class="espaciado-p">12 WEBSITES</p>
+                <hr>
+                <p class="espaciado-p">ADVANCED CUSTOMIZATION</p>
+                <hr>
+                <p class="espaciado-p">WORDPRESS INTEGRATION</p>
+                <hr>
+                <p class="espaciado-p">EMAIL SUPPORT</p>
+            </div>
+            </div>
+            <div class="options3">
+                <h3 class="back-color-pricing">Enterprise</h3>
+                <hr>
+                <p class="back-color-pricing">$<span class="span-price">7</span><span id="span-0">o</span></p>
+                <p class="back-color-pricing" id="text-princing">Monthly Payment</p>
+                <div class="linea1"></div>
+                <div class="info-price">
+                <p class="espaciado-p">UNLIMITED SPACE</p>
+                <hr>
+                <p class="espaciado-p">UNLIMITED BANDWIDTH</p>
+                <hr>
+                <p class="espaciado-p">100 WEBSITES</p>
+                <hr>
+                <p class="espaciado-p">ADVANCED CUSTOMIZATION</p>
+                <hr>
+                <p class="espaciado-p">WORDPRESS INTEGRATION</p>
+                <hr>
+                <p class="espaciado-p">24/7 CUSTOMER SUPPORT</p>
+            </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="custommers-padre">
+    <div class="text-customers">
+        <h6>WHAT OUR CUSTOMERS ARE SAYING</h6>
+        <div class="linea-sub"></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
+    <div class="images-customers">
+        <div class="image-1">
+            <div class="text-image">
+               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Doloribus accusamus expedita repellat similique odio
+               aspernatur ex, architecto eaque quo suscipit. 
+            </div>
+            <div class="person">
+            <img src="Assets/01.jpg" alt="" class="img-text">
+            <div class="text">
+                <h3>Luis D.</h3>
+                <p>Manager</p>
+            </div>
+            </div>
+        </div>
+        <div class="image-2">
+            <div class="text-image">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Doloribus accusamus expedita repellat similique odio
+                aspernatur ex, architecto eaque quo suscipit. 
+             </div>
+             <div class="person">
+                <img src="Assets/02.jpg" alt="" class="img-text">
+                <div class="text">
+                <h3>Sara M.</h3>
+                <p>Freelancer</p>
+            </div>
+            </div>
+        </div>
+        <div class="image-3">
+            <div class="text-image">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Doloribus accusamus expedita repellat similique odio
+                aspernatur ex, architecto eaque quo suscipit. 
+             </div>
+             <div class="person">
+            <img src="Assets/03.jpg" alt="" class="img-text">
+            <div class="text">
+                <h3>David F.</h3>
+                <p>Photographer</p>
+            </div>
+            </div>
+        </div>
+    </div>
+</div>
+    <div class="axure-padre">
+        <div class="text-axure">
+            <h6>STYLISH AXURE DESING</h6>
+            <div class="linea-sub"></div>
+            <p>Use the sections you need remove the ones you don't. Create gorgeous prototypes faster than ever!</p>
+        </div>
+        <button id="btn-center">Download</button>
+    </div>
+    <div class="contact-us">
+        <div class="text-conctact">
+        <h1>CONTACT US</h1>
+        <div class="linea-sub"></div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
+    <div class="llenado-padre">
+    <div class="llenado-izquierdo">
+        <input type="text" placeholder="Name">
+        <input type="email" placeholder="Email" name="" id="">
+        <input type="text" placeholder="Subject">
+    </div>
+        <div class="llenado-derecha">
+            <input type="text" placeholder="Message">
+        </div>
+    </div>
+        <button>Send Message</button>
+    </div>
+    <footer>
+        <img src="Assets/wSocials.png" alt="">
+        <p>&copy; 2025 Axure Themes By - John Stiven Ortega</p>
+    </footer>
 </body>
 
 </html>
